--- a/config/locales/it/devise_views.yml
+++ b/config/locales/it/devise_views.yml
@@ -6,76 +6,81 @@ it:
         submit: Inviare nuovamente le istruzioni
         title: Inviare nuovamente le istruzioni di conferma
       show:
+        instructions_html: "Procediamo con la conferma dell'account tramite la email <b>%{email}</b>"
         new_password_confirmation_label: Reintrodurre la password
         new_password_label: Nuova password
-        please_set_password: Si prega di scegliere la nuova pasword (che permetterà di accedere con l'email di cui sopra)
-        submit: Confermare
-        title: Confermare il mio account
+        please_set_password: "Per cortesia introduci una nuova password per il tuo account (insieme alla email specificata prima ti permetterà di eseguire il login)"
+        submit: Conferma
+        title: Conferma account
     mailer:
       confirmation_instructions:
-        confirm_link: Conferma il mio account
+        confirm_link: Conferma account
         text: "È possibile confermare il tuo account di posta elettronica attraverso il seguente link:"
-        title: Benvenuto
+        title: Benvenuto/a
         welcome: Benvenuto/a
       reset_password_instructions:
-        change_link: Cambiare la mia password
-        hello: Salve
+        change_link: Cambiare password
+        hello: Ciao
         ignore_text: Se non hai richiesto una modifica della password, ignora questa email.
         info_text: La password non cambierà a meno che non si acceda al link e la si modifichi.
         text: "Abbiamo ricevuto una richiesta per il cambio della tua password. Potrai farlo attraverso il seguente link:"
-        title: Cambia la tua password
+        title: Cambia password
       unlock_instructions:
-        hello: Ciao
+        hello: Salve
         info_text: Il tuo account è stato bloccato a causa di un numero eccessivo di tentativi di accesso non riusciti.
-        instructions_text: "Cliccate su questo link per sbloccare il tuo account:"
+        instructions_text: "Fai click su questo link per sbloccare il tuo account:"
         title: Il tuo account è stato bloccato
         unlock_link: Sbloccare la mia utenza
     menu:
       login_items:
-        login: Accedere
-        logout: Scollegarsi
-        signup: Registrarsi
+        login: Accedi
+        logout: Scollegati
+        signup: Registrati
     organizations:
       registrations:
         new:
           email_label: Email
-          organization_name_label: Nome dell'organizzazione
-          password_confirmation_label: Ripeti la password
+          organization_name_label: "Nome dell'organizzazione"
+          password_confirmation_label: Conferma la password
           password_label: Password
-          phone_number_label: Numero di telefono
-          responsible_name_label: Nome e cognome della persona responsabile per l'associazione
-          responsible_name_note: Questa sarà la persona che rappresenterà l'associazione a cui nome sono presentate le proposte
-          submit: Registrarsi
-          title: Registrarsi come un'organizzazione o associazione
+          phone_number_label: Numero Telefono
+          responsible_name_label: Nome e cognome della persona responsabile del collettivo
+          responsible_name_note: "Sarà la persona che rappresenta l'associazione/collettivo in noe della quale sono presentate le proposte"
+          submit: Registrati
+          title: Registrati come organizzazione / collettivo
         success:
-          back_to_index: 'Ho capito: torno alla pagina principale'
-          title: Registrazione dell'organizzazione / associazione
+          back_to_index: "Ho capito, torna alla pagina principale"
+          instructions_1_html: "Tra breve <b>ti contatteremo</b> per verificare che rappresenti realmente questo collettivo."
+          instructions_2_html: Mentre <b>controlli la tua posta elettronica</b>, ti abbiamo inviato un <b>link per confermare il tuo account</b>.
+          instructions_3_html: Una volta confermato, potrai iniziare a partecipare come collettivo non verificato.
+          thank_you_html: Grazie per avere registrato il tuo collettivo sul sito. Adesso si trova <b>in attesa di verifica</b>.
+          title: "Registro dell'organizzazione / collettivo"
     passwords:
       edit:
-        change_submit: Cambia la password
-        password_confirmation_label: Conferma la nuova password
-        password_label: Nuova password
-        title: Cambia la password
+        change_submit: Cambia password
+        password_confirmation_label: Conferma password nuova
+        password_label: Password nuova
+        title: Cambia la tu password
       new:
         email_label: Email
-        send_submit: Inviare le istruzioni
-        title: Password dimenticata?
+        send_submit: Ricevere istruzioni
+        title: 'Hai dimenticato la password?'
     sessions:
       new:
-        login_label: Email o username
-        password_label: Password
+        login_label: Email o nome utente
+        password_label: Password che userai per accedere a questo sito web
         remember_me: Ricordami
-        submit: Entrare
-        title: Accedere
+        submit: Accedi
+        title: Accedi
     shared:
       links:
-        login: Entra
-        new_confirmation: Non hai ricevuto le istruzioni per attivare il tuo account?
-        new_password: Password dimenticata?
-        new_unlock: Non hai ricevuto le istruzioni per sbloccare la tua utenza?
-        signin_with_provider: Accedere tramite %{provider}
-        signup: Non hai un account? %{signup_link}
-        signup_link: Scollegarsi
+        login: Accedi
+        new_confirmation: 'Non hai ricevuto le istruzioni per confermare il tuo account?'
+        new_password: 'Hai dimenticato la password?'
+        new_unlock: 'Non hai ricevuto le istruzioni per eseguire lo sblocco?'
+        signin_with_provider: Entra con %{provider}
+        signup: 'Non hai un account? %{signup_link}'
+        signup_link: Registrati
     unlocks:
       new:
         email_label: Email
@@ -84,38 +89,41 @@ it:
     users:
       registrations:
         delete_form:
-          erase_reason_label: Motivo
-          info: Questa azione non può essere annullata. Si è certi di voler cancellare questo account?
-          info_reason: Se vuoi, lasciaci un motivo (opzionale)
+          erase_reason_label: Motivo della cancellazione
+          info: Non è possibile annullare questa operazione. Una volta disicritto, non potrai più eseguire il login con la tua utenza attuale.
+          info_reason: Se vuoi, scrivi il perché intendi cancellarti (facoltativo).
           submit: Cancellare il mio account
           title: Cancellare il mio account
         edit:
           current_password_label: Password attuale
-          edit: Modificare
+          edit: Modifica password
           email_label: Email
-          leave_blank: Lasciare vuoto se non si desidera modificare
-          need_current: Abbiamo bisogno della tua attuale password per confermare le modifiche
-          password_confirmation_label: Confermare la nuova password
-          password_label: Nuova password
-          update_submit: Aggiornare
+          leave_blank: Lasciare vuoto se non si desidera cambiarla
+          need_current: La password attuale è necessaria per confermare le modifiche
+          password_confirmation_label: Conferma password nuova
+          password_label: Password nuova
+          update_submit: Aggiorna
           waiting_for: "In attesa di conferma di:"
         new:
           cancel: Annulla login
           email_label: Email
-          organization_signup: Rappresenti un'organizzazione o una associazione? %{signup_link}
+          organization_signup: 'Rappresenti una organizzazione o un collettivo? %{signup_link}'
           organization_signup_link: Registrati qui
-          password_confirmation_label: Conferma la password
-          password_label: Password
-          redeemable_code: Codice di verifica ricevuto via e-mail (opzionale)
-          submit: Registrarsi
-          terms: Registrandoti accetti %{terms}
-          terms_link: termini e condizioni d'uso
-          terms_title: Registrandoti accetti i termini e le condizioni d'uso
-          title: Registrarsi
+          password_confirmation_label: Ripeti la password
+          password_label: Password (minimo 8 caratteri)
+          redeemable_code: Codice di verifica (nel caso si abbia ricevuto il codice per lettera)
+          submit: Registrati
+          terms: Registrandoti accetti le %{terms}
+          terms_link: condizioni di uso
+          terms_title: Registrandoti accetti le condizioni di uso
+          title: Registrazione
           username_is_available: Nome utente disponibile
           username_is_not_available: Nome utente già in uso
           username_label: Nome utente
-          username_note: Nome che appare accanto ai tuoi post
+          username_note: "Inserisci il tuo nome e cognome, oppure uno pseudonimo: apparirà nelle tue pubblicazioni. Ricorda che non puoi usare identità altrui (neanche come pseudonimo) perché è reato perseguibile d'ufficio (art. 494 Codice Penale)."
         success:
-          back_to_index: Ho capito; torna alla pagina principale
-          title: Modifica il tuo indirizzo email
+          back_to_index: Ho capito, torna alla pagina principale
+          instructions_1_html: Per cortesia <b>controlla la tua casella di posta elettronica</b> - ti abbiamo inviato un <b>link per confermare il tuo account</b>.
+          instructions_2_html: Una volta confermato, potrai iniziare a partecipare.
+          thank_you_html: Grazie per esserti registrato su questo sito web. Adesso devi <b>confermare il tuo indirizzo di posta elettronica</b>.
+          title: Controlla la tua casella di posta
