--- a/config/locales/it/mailers.yml
+++ b/config/locales/it/mailers.yml
@@ -1,65 +1,134 @@
 it:
   mailers:
+    title: "DecidiTorino"
     no_reply: "Questo messaggio è stato inviato da un indirizzo di posta elettronica che non accetta risposte."
     comment:
       hi: Salve
-      new_comment_by: C'è un nuovo commento da <strong>%{commenter}</strong>
+      new_comment_by_html: "C'è un nuovo commento da <strong>%{commenter}</strong> in"
       subject: Qualcuno ha commentato sul tuo %{commentable}
       title: Nuovo commento
     config:
-      manage_email_subscriptions: Per non ricevere più queste email, modifica le impostazioni
+      manage_email_subscriptions: Per non ricevere più queste email, modifica le tue impostazioni su
     email_verification:
       click_here_to_verify: questo link
+      instructions_2_html: Questa e-mail consente di verificare il tuo account con <b>%{document_type} %{document_number}</b>. Se questi dati non ti appartengono, non cliccare sul link precedente e ignorare questa email.
+      instructions_html: "Per completare la verifica dell'account utente, è necessario cliccare su %{verification_link}."
       subject: Conferma il tuo indirizzo email
-      thanks: Grazie.
+      thanks: Grazie mille.
       title: Conferma il tuo account utilizzando il seguente link
     reply:
-      hi: Ciao
-      new_reply_by: C'è una nuova risposta da <strong>%{commenter}</strong> per il tuo commento su
+      hi: Salve
+      new_reply_by_html: "C'è una nuova risposta da <strong>%{commenter}</strong> ad un tuo commento su"
       subject: Qualcuno ha risposto al tuo commento
       title: Nuova risposta al tuo commento
     proposal_notification_digest:
-      info: "Ecco le nuove notifiche pubblicate dagli autori delle proposte da te sostenute su %{org_name}."
-      title: "Notifiche di proposte su %{org_name}"
+      info: "Di seguito ti mostriamo le nuove notifiche che hanno pubblicato gli autori delle proposte che stai sostenendo su %{org_name}."
+      title: "Notifiche delle proposte su %{org_name}"
       share: Condividi la proposta
       comment: Commenta la proposta
-      unsubscribe: "Se non si desidera ricevere notifiche relativamente alle proposte, visita %{account} e togli la spunta a 'Ricevi un riassunto delle notifiche relative alle proposte'."
+      unsubscribe: "Se non intendi ricevere le notifiche delle proposte, puoi entrare in %{account} e togliere la spunta all'opzione 'Ricevi un riepilogo delle notifiche sulle proposte'."
       unsubscribe_account: Il mio account
     direct_message_for_receiver:
       subject: "Hai ricevuto un nuovo messaggio privato"
-      reply: Rispondere a %{sender}
-      unsubscribe: "Se non si desidera ricevere messaggi diretti, visita %{account} e togli la spunta a 'Ricevi email sui messaggi diretti'."
+      reply: Rispondi a %{sender}
+      unsubscribe: "Se non intendi ricevere messaggi privati, visita %{account} e togli la spunta a 'Ricevi email con messaggi privati'."
       unsubscribe_account: Il mio account
     direct_message_for_sender:
       subject: "Hai inviato un nuovo messaggio privato"
+      title_html: "Hai inviato un nuovo messaggio privato a <strong>%{receiver}</strong> con il contenuto:"
     user_invite:
       ignore: "Se non hai richiesto questo invito non ti preoccupare, puoi ignorare questa email."
       text: "Grazie per aver chiesto di aderire a %{org}! Tra pochi secondi potrai iniziare a partecipare, basta solo compilare il modulo qui sotto:"
       thanks: "Grazie mille."
-      title: "Benvenuto/a a %{org}"
-      button: Completare la registrazione
+      title: "Benvenuto su %{org}"
+      button: Completa la registrazione
       subject: "Invito per %{org_name}"
     budget_investment_created:
-      subject: "Grazie per aver creato un investimento!"
-      title: "Grazie per aver creato un investimento!"
+      subject: "Grazie per aver creato un progetto!"
+      title: "Grazie per aver creato un progetto!"
+      intro_html: "Salve <strong>%{author}</strong>,"
+      text_html: "Grazie mille per aver creato il progetto <strong>%{investment}</strong> per i Bilanci Partecipativi <strong>%{budget}</strong>."
+      follow_html: "Ti terremo informato su come procede il processo, puoi anche seguirlo sulla pagina <strong>%{link}</strong>."
       follow_link: "Bilanci partecipativi"
       sincerely: "Cordiali saluti"
       share: "Condividi il tuo progetto"
     budget_investment_unfeasible:
       hi: "Gentile utente,"
-      new_href: "nuovo progetto di investimento"
+      new_html: 'In ragione di ciò, ti invitiamo ad elaborare un <strong>nuovo progetto di spesa</strong> che sia conforme alle condizioni di questo processo. Tale operazione può essere portata a termine facendo click su: %{url}.'
+      new_href: "nuovo progetto di spesa"
       sincerely: "Cordiali saluti"
-      sorry: "Ci scusiamo per l'inconveniente e ancora grazie per la tua preziosa partecipazione."
-      subject: "Il tuo progetto di investimento '%{code}' è stato contrassegnato come irrealizzabile"
+      sorry: "Ci dispiace per l'inconveniente e ringraziamo di nuovo per la partecipazione."
+      subject: "Il tuo progetto di spesa '%{code}' è stato contrassegnato come non realizzabile"
     budget_investment_selected:
-      subject: "Il tuo progetto di investimento '%{code}' è stato selezionato"
+      subject: "Il tuo progetto di spesa '%{code}' è stato selezionato"
       hi: "Gentile utente,"
-      share: "Per iniziare a ottenere voti, condividi il tuo progetto di investimento sui social network. Solo così potrai vederlo realizzato!"
+      share: "Inizia a raccogliere voti, condividi il tuo progetto di investimento sui social network. Solo così potrai vederlo realizzato!"
       share_button: "Condividi il tuo progetto di investimento"
       thanks: "Grazie ancora per aver partecipato."
       sincerely: "Cordiali saluti"
     budget_investment_unselected:
-      subject: "Il tuo progetto di investimento '%{code}' è stato selezionato"
+      subject: "Il tuo progetto di spesa '%{code}' non è stato selezionato"
       hi: "Gentile utente,"
       thanks: "Grazie ancora per aver partecipato."
       sincerely: "Cordiali saluti"
+    evaluation_comment:
+      subject: "Nuovo commento di valutazione"
+      title: Nuovo commento di valutazione per %{investment}
+      hi: Ciao
+      new_comment_by_html: È presente un nuovo commento di valutazione di <strong>%{commenter}</strong> nel bilancio partecipativo %{investment}
+      commenter_info: "%{commenter}, %{time}"
+    new_actions_notification_rake_created:
+      subject: "Novità della tua proposta cittadina"
+      hi: "Ciao %{name},"
+      new_resource: "NUOVA RISORSA SBLOCCATA"
+      introduction: "Come sai, il %{created_at_day} di %{created_at_month} hai creato la proposta %{title} sotto forma di bozza."
+      text_1: "Quando vuoi è possibile pubblicarla clickando su questo link: %{link_to_published}. Se qualcosa non ti è chiaro…"
+      text_2: "approfitta di questo momento! Unisciti ad altre persone con gli stessi interessi e prepara la diffusione di cui avrà bisogno la tua proposta quando sarà pubblicata."
+      text_3: "E per accompagnarti in questa sfida, qui trovi le novità..."
+      text_4: "Dai uno sguardo a questa NUOVA AZIONE consigliata:"
+      text_5: "L'azione seguente che ti consigliamo è:"
+      footer_text: "Come sempre, entra nel Pannello delle proposte e ti spieghiamo dettagliatamente come utilizzare queste risorse e come traerne il massimo profitto."
+      dashboard_button: "Avanti, scoprili!"
+    new_actions_notification_rake_published:
+      subject: "Più novità sulla tua proposta cittadina"
+      hi: "Ciao %{name},"
+      new_resource: "NUOVA RISORSA SBLOCCATA"
+      introduction: "Come sai, il %{published_at_day} di %{published_at_month} hai pubblicato la proposta %{title}."
+      text_1: "Bene, fino a questo momento hai ottenuto %{votes_count} appoggi, Congratulazioni!"
+      text_2: "E per questo, hai a disposizione una nuova risorsa che ti aiuterà ad avanzare nei passi successivi."
+      text_3: "Ti restano %{days_count} giorni per far sì che la tua proposta raggiunga i %{max_votes_count} appoggi e possa così essere votata. Forza e continua con la sua diffusione. Ti servono idee?"
+      text_4: "NUOVA AZIONE DI DIFFUSIONE CONSIGLIATA"
+      text_5: "Ce ne sono ancora, dai uno sguardo alla seguente azione:"
+      footer_text: "Come sempre, entra nel Pannello delle proposte e ti descriviamo nel dettagio come utilizzare queste risorse e come utilizzarle al massimo del loro potenziale."
+      dashboard_button: "Coraggio, scoprili!"
+    new_actions_notification_on_create:
+      subject: "Bozza di proposta creata"
+      hi: "Ciao %{name}!"
+      introduction: "La tua proposta %{title} è stata creata con successo."
+      text_1: "Approfitta che la tua proposta non è ancora stata pubblicata e preparati per contattare molte persone."
+      text_2: "Quando sei preparato/a pubblica la tua proposta da questo <a href='%{link}'>link</a>."
+      text_3: "Sappiamo che creare una proposta che abbia richiamo e ottenere il supporto necessario può sembrare complicato. Ma non preoccuparti perché ti aiuteremo!"
+      text_4: "Hai a disposizione uno strumento che sarà il tuo nuovo miglior alleato: il pannello delle Proposte Cittadine."
+      list_1: "Ogni giorno entra nelle pannello della tua proposta per utilizzare i consigli e le risorse che ti condivideremo."
+      list_2: "Questi consigli, azioni e risorse che ti daranno idee ed anche soluzioni pratiche per ottenere più appoggi ed avere una comunità pià ampia. Non scordarli!"
+      list_3: "Man mano che ottieni più appoggi, sbloccherai nuove e migliori risorse. Al momento, hai a disposizione un modello di e-mail da inviare massivamente a tutti i tuoi contatti, un cartello da stampare, fra le funzionalità ed i premi che scoprirai pian piano. Non smettere di aumentare gli appoggi e noi non smetterermo di premiarti e di aiutarti!"
+      list_4: "Hai %{max_month} mesi dal momento della pubblicazione della proposta per raggiungere %{max_votes} appoggi e far sì che la tua proposta diventi realtà. I primi giorni sono i più importanti. È una sfida, preparati!"
+      text_5: "E per iniziare con piena motivazione,"
+      text_6: "qui hai a disposizione varie risorse ed un elenco di suggerimenti che ti arriveranno ogni giorno per preparare la diffusione!"
+      dashboard_button: "Coraggio, scoprili!"
+    new_actions_notification_on_published:
+      subject: "La tua proposta cittadina è stata pubblicata. Non smettere di diffonderla!"
+      hi: "Congratulazioni %{name}! La tua proposta %{title} è stata creata con successo."
+      text_1: "E adesso, avanti con i tuoi primi 100 appoggi! "
+      text_2: "Perché 100?"
+      text_3: "La nostra esperienza ci dice che il primo giorno è fondamentale. Perché oltre ad avere l'energía di apportare qualcosa di nuovo, l'essere una proposta pubblicata di recente potrà beneficiare dell'importante visibilità conferita dall'evidenziazione delle nuove proposte."
+      text_4: "Ottieni 100 appoggi il primo giorno, e avrai una prima comunità che ti sosterrà."
+      text_5: "Per questo, ti sfidiamo ad ottenerli, però non senza un gran aiuto!"
+      text_6: "Ricorda che nel tuo Pannello delle proposte hai a disposizione nuove risorse e suggerimenti di azioni di diffusione."
+      list_1: "Entra ogni giorno per monitorare l'avanzamento e impiegare i consigli e le risorse che ti condivideremo. Sono idee e soluzioni pratiche per riuscire ad ottenere gli appoggi di cui hai bisogno."
+      list_2: "Man mano che ottieni più appoggi, sbloccherai nuove e migliori risorse. Non smettere di incrementare gli appoggi e noi non smetteremo di premiarti e di aiutarti!"
+      text_7: "E per iniziare a pieno ritmo..."
+      text_8: "qui trovi una risorsa a tua completa disposizione!"
+      text_9: "Troverai anche questa nuova azione consigliata di diffusione de difusión..."
+      text_10: "Di sicuro hai delle risorse in attesa di essere impiegate!"
+      dashboard_button: "Coraggio, scoprili!"
