--- a/config/locales/it/officing.yml
+++ b/config/locales/it/officing.yml
@@ -4,64 +4,87 @@ it:
       title: Votazione
     dashboard:
       index:
-        title: Scrutinio
-        info: Qui è possibile convalidare i documenti degli utenti e archiviare i risultati delle votazioni
-        no_shifts: Oggi non hai turni da scrutatore.
+        title: Presiedere il seggio delle votazioni
+        info: Qui puoi validare i documenti dei cittadini e salvare i risultati delle urne
+        no_shifts: Oggi non hai assegnati turni come presidente di seggio.
     menu:
-      voters: Convalidare il documento
-      total_recounts: Scrutinio finale e risultati
+      voters: Validare documento e votare
+      total_recounts: Riconteggio totale e scrutinio
     polls:
       final:
-        title: Votazioni pronte per lo scrutinio finale
-        no_polls: Non sei incaricato degli scrutini finali in alcuna votazione attiva
+        title: Elenco delle votazioni concluse
+        no_polls: Non si dispone dei permessi per il riconteggio finale nelle votazioni recenti
         select_poll: Seleziona votazione
-        add_results: Aggiungere i risultati
+        add_results: Aggiungi risultati
+    poll_budgets:
+      see_ballot_sheets: Vedi la lista delle schede elettorali
+      index:
+        title: "%{poll_budget} - Elenco delle schede elettorali"
+        ballot_sheet: "Scheda elettorale %{id}"
+        ballot_sheet_name: Nome
+        ballot_sheet_author: Autore
+        ballot_sheet_creation_date: Data di creazione
+        empty_results: Non sono ancora state caricate le schede elettorali
+      new:
+        title: "%{poll_budget} - Nuova scheda elettorale"
+        booth: Urna
+        select_booth: Scegli urna
+        csv_data: Dati in CSV
+        submit: Salva
+      show:
+        created_at: Data di creazione
+        author: Autore
+        data: Dati in CSV
+    booth:
+      new:
+        title: "Scegli la tua urna"
     results:
       flash:
-        create: "Risultati salvati"
-        error_create: "Risultati non salvati. Errore nei dati."
-        error_wrong_booth: "Seggio sbagliato. Risultati non salvati."
+        create: "Dati salvati"
+        error_create: "Risultati NON aggiunti. Errore nei dati"
+        error_wrong_booth: "Urna errata. Risultati NON salvati."
       new:
         title: "%{poll} - Aggiungi risultati"
-        not_allowed: "Sei autorizzato ad aggiungere risultati per questa votazione"
+        not_allowed: "Non hai i permessi per introdurre i risultati"
         booth: "Urna"
-        date: "Data"
-        select_booth: "Selezionare il seggio"
+        date: "Giorno"
+        select_booth: "Scegli urna"
         ballots_white: "Schede totalmente bianche"
-        ballots_null: "Voti non validi"
-        ballots_total: "Totale schede"
+        ballots_null: "Schede nulle"
+        ballots_total: "Schede valide"
         submit: "Salva"
         results_list: "I tuoi risultati"
-        see_results: "Vedere i risultati"
+        see_results: "Vedi risultati"
       index:
         no_results: "Nessun risultato"
         results: Risultati
         table_answer: Risposta
         table_votes: Voti
         table_whites: "Schede totalmente bianche"
-        table_nulls: "Voti non validi"
-        table_total: "Totale schede"
+        table_nulls: "Schede nulle"
+        table_total: "Schede valide"
     residence:
       flash:
-        create: "Documento verificato con l'Anagrafe"
-        not_allowed: "Oggi non hai turni da scrutatore"
+        create: "Documento verificato in Anagrafe"
+        not_allowed: "Oggi non hai turno come presidente di seggio"
       new:
-        title: Convalida documento
-        document_number: "Numero del documento (lettere incluse)"
-        submit: Convalida documento
-        error_verifying_census: "L’Anagrafe non ha potuto verificare questo documento."
-        form_errors: non hanno consentito di verificare il documento
+        title: Valida documento
+        document_number: "Numero di documento"
+        submit: Valida documento
+        error_verifying_census: "Non è stato possibile verificare il documento in Anagrafe."
+        form_errors: evitaron verificar este documento
     voters:
       new:
         title: Votazioni
-        table_poll: Sondaggio
-        table_status: Status votazioni
+        table_poll: Votazione
+        table_status: Stato delle votazioni
         table_actions: Azioni
-        not_to_vote: La persona ha deciso di non votare al momento
+        not_to_vote: Per il momento la persona ha deciso di non votare
       show:
         can_vote: Puoi votare
-        error_already_voted: Hai già partecipato a questa votazione
+        cannot_vote: La persona non può votare perché non è residente nel/nei distretto/i per i quali ha luogo la votazione.
+        error_already_voted: Hai già partecipato a questa votazione.
         submit: Conferma voto
-        success: "Voto inserito!"
+        success: "Voto aggiunto!"
       can_vote:
-        submit_disable_with: "Attendi, conferma del voto in corso..."
+        submit_disable_with: "Attendi, processo di conferma del voto in corso..."
