--- a/config/locales/it/responders.yml
+++ b/config/locales/it/responders.yml
@@ -5,32 +5,33 @@ it:
         notice: "%{resource_name} creato con successo."
         debate: "Dibattito creato correttamente."
         direct_message: "Il messaggio è stato inviato correttamente."
-        poll: "Sondaggio creato correttamente."
+        poll: "Votazione creata con successo."
         poll_booth: "Seggio creato correttamente."
         poll_question_answer: "Risposta creata con successo"
-        poll_question_answer_video: "Video creato con successo"
-        poll_question_answer_image: "Immagine caricata con successo"
+        poll_question_answer_video: "Video creato correttamente"
+        poll_question_answer_image: "Immagine caricata correttamente"
         proposal: "Proposta creata correttamente."
         proposal_notification: "Il tuo messaggio è stato inviato correttamente."
-        budget_investment: "Proposta di investimento creata correttamente."
+        budget_investment: "Progetto di spesa creato correttamente."
         signature_sheet: "Foglio per le firme creato correttamente"
-        topic: "Argomento creato con successo."
-        valuator_group: "Gruppo di stimatori creato con successo"
+        topic: "Tema creato con successo."
+        valuator_group: "Gruppo di valutatori creato correttamente"
       save_changes:
         notice: Modifiche salvate
       update:
         notice: "%{resource_name} aggiornato con successo."
-        debate: "Dibattito creato correttamente."
-        poll: "Sondaggio creato correttamente."
-        poll_booth: "Seggio creato correttamente."
+        debate: "Dibattito aggiornato correttamente."
+        poll: "Votazione aggiornata correttamente."
+        poll_booth: "Seggio aggiornato correttamente."
+        active_poll: "Descrizione generale delle votazioni aggiornata correttamente."
         proposal: "Proposta aggiornata correttamente."
-        budget_investment: "Progetto di investimento aggiornato correttamente."
-        topic: "Argomento aggiornato con successo."
-        valuator_group: "Gruppo di stimatori aggiornato con successo"
-        translation: "Traduzione caricata con successo"
+        budget_investment: "Progetto di spesa aggiornato correttamente."
+        topic: "Tema aggiornato con successo."
+        valuator_group: "Gruppo di valutatori aggiornato correttamente"
+        translation: "Traduzione aggiornata correttamente"
       destroy:
-        budget_investment: "Progetto di investimento eliminato."
-        error: "Non può essere eliminato"
-        topic: "Argomento eliminato con successo."
-        poll_question_answer_video: "Video di risposta eliminato con successo."
-        valuator_group: "Gruppo di stimatori eliminato con successo"
+        budget_investment: "Progetto di spesa eliminato."
+        error: "Non è stato possibile eliminare"
+        topic: "Tema eliminato."
+        poll_question_answer_video: "Video di risposta eliminato."
+        valuator_group: "Gruppo di valutatori eliminato correttamente"
