--- a/config/locales/it/settings.yml
+++ b/config/locales/it/settings.yml
@@ -1,34 +1,203 @@
 it:
   settings:
     comments_body_max_length: "Lunghezza massima dei commenti"
+    comments_body_max_length_description: "In numero di caratteri"
     official_level_1_name: "Funzionario pubblico di livello 1"
+    official_level_1_name_description: "Etichetta che apparirà sugli utenti contrassegnati come funzionari pubblici di livello 1"
     official_level_2_name: "Funzionario pubblico di livello 2"
+    official_level_2_name_description: "Etichetta che apparirà sugli utenti contrassegnati come funzionari pubblici di livello 2"
     official_level_3_name: "Funzionario pubblico di livello 3"
+    official_level_3_name_description: "Etichetta che apparirà sugli utenti contrassegnati come funzionari pubblici di livello 3"
     official_level_4_name: "Funzionario pubblico di livello 4"
+    official_level_4_name_description: "Etichetta che apparirà sugli utenti contrassegnati come funzionari pubblici di livello 4"
     official_level_5_name: "Funzionario pubblico di livello 5"
+    official_level_5_name_description: "Etichetta che apparirà sugli utenti contrassegnati come funzionari pubblici di livello 5"
     max_ratio_anon_votes_on_debates: "Percentuale massima di voti anonimi per ogni dibattito"
-    max_votes_for_proposal_edit: "Numeri di voti necessari per non poter più modificare la proposta"
-    max_votes_for_debate_edit: "Numeri di voti necessari per non poter più modificare il dibattito"
-    proposal_code_prefix: "Prefisso per i codici di proposta"
-    votes_for_proposal_success: "Numero di voti necessari per approvare una proposta"
-    months_to_archive_proposals: "Mesi per archiviare una proposta"
+    max_ratio_anon_votes_on_debates_description: "Si considerano voti anonimi quelli dati da utenti registrati con un account non ancora certificato"
+    max_votes_for_proposal_edit: "Numero di appoggi ricevuti i quali una proposta non è più modificabile"
+    max_votes_for_proposal_edit_description: "A partire da questo numero di appoggi l'autore di una proposta non potrà più modificarla"
+    max_votes_for_debate_edit: "Numero di voti necessari per non poter più modificare un dibattito"
+    max_votes_for_debate_edit_description: "A partire da questo numero di voti l'autore di un dibattito non potrà più modificarlo"
+    proposal_code_prefix: "Prefisso per i codici delle proposta"
+    proposal_code_prefix_description: "Questo prefisso apparirà nelle proposte prima della data di creazione e del suo ID"
+    featured_proposals_number: "Numero di proposte in evidenza"
+    featured_proposals_number_description: "Numero di proposte in evidenza che saranno mostrate se è attiva la funzionalità delle Proposte in evidenza"
+    votes_for_proposal_success: "Numero di appoggi necessari per approvare una Proposta"
+    votes_for_proposal_success_description: "Quando una proposta raggiunge questo numero di appoggi non ne potrà ricevere altri, perché tale proposta è considerata di successo"
+    months_to_archive_proposals: "Mesi per archiviare le proposte"
+    months_to_archive_proposals_description: "Trascorso questo numero di mesi le proposte sono archiviate e non potranno più ricevere appoggi"
     email_domain_for_officials: "Dominio di posta elettronica per funzionari pubblici"
+    email_domain_for_officials_description: "Tutti gli utenti che si registrano con un indirizzo di posta elettronica appartenente a tale dominio avranno, in automatico, certificato il proprio account"
     twitter_handle: "Utente Twitter"
+    twitter_handle_description: "Se specificato, apparirà a piè di pagina"
     twitter_hashtag: "Hashtag per Twitter"
+    twitter_hashtag_description: "Hashtag che sarà riportato nelle condivisioni via Twitter"
     facebook_handle: "Utente Facebook"
+    facebook_handle_description: "Se specificato, apparirà a piè di pagina"
     youtube_handle: "Utente YouTube"
+    youtube_handle_description: "Se specificato, apparirà a piè di pagina"
     telegram_handle: "Utente Telegram"
+    telegram_handle_description: "Se specificato, apparirà a piè di pagina"
     instagram_handle: "Utente Instagram"
+    instagram_handle_description: "Se specificato, apparirà a piè di pagina"
     url: "URL principale"
-    org_name: "Organizzazione"
+    url_description: "URL principale del sito web"
+    org_name: "Nome dell'organizzazione"
+    org_name_description: "Nome dell'organizzazione a cui fa riferimento il sito web"
+    related_content_score_threshold: Soglia del punteggio del contenuto relazionato
+    related_content_score_threshold_description: In base al punteggio dei voti in un contenuto correlato, nasconde il contenuto che gli utenti contrassegnano come non correlato
+    hot_score_period_in_days: "Periodo (giorni) usato per il filtro 'Più Attivi'"
+    hot_score_period_in_days_description: "Il filtro 'Più Attivi' usato in diverse sezioni si baserà sui voti ricevuti negli ultimi X giorni"
+    mailer_from_name: "Nominativo del mittente"
+    mailer_from_name_description: "È il nome che apparirà come mittente delle email inviate dall'applicazione"
+    mailer_from_address: "Email del mittente"
+    mailer_from_address_description: "È l'indirizzo di posta elettronica che sarà contenuto nelle email inviate dall'applicazione"
+    meta_title: "Titolo del sito (SEO)"
+    meta_title_description: "Titolo del sito, impiegato per migliorare la Search Engine Optimization"
     meta_description: "Descrizione del sito (SEO)"
+    meta_description_description: 'Descrizione del sito <meta name="description">, impiegata per migliorare la Search Engine Optimization'
     meta_keywords: "Parole chiave (SEO)"
-    min_age_to_participate: Età minima necessaria per partecipare
+    meta_keywords_description: 'Parole chiave <meta name="keywords">, impiegate per migliorare la Search Engine Optimization'
+    min_age_to_participate: "Età minima necessaria per partecipare"
+    min_age_to_participate_description: "Gli utenti che hanno compiuto l'età indicata potranno partecipare a tutti i processi per i quali è necessario disporre di una utenza certificata"
+    proposals:
+      successful_proposal_id: Proposta di successo
+      successful_proposal_id_description: Si utilizza questa proposta come riferimento per una proposta di successo per numero di appoggi e sarà visualizzata nella grafica del pannello di controllo
+      poll_short_title: Sondaggi
+      poll_short_title_description: Breve descrizione della funzionalità dei sondaggi. Consente agli utenti di creare sondaggi riguardo una proposta.
+      poll_description: Descrizione sondaggi
+      poll_description_description: Descrizione dettagliata della funzionalità dei sondaggi
+      poll_link: Link di informazione aggiuntiva
+      poll_link_description: Aggiungi un link di informazione aggiuntiva alla funzionalità dei sondaggi del panello di controllo
+      email_short_title: Posta elettronica
+      email_short_title_description: 'Breve descrizione della funzionalità di posta elettronica. Consente agli utenti di inviare una email per diffondere la loro proposta. Il contenuto della email è memorizzato nel file "/app/views/dashboard/mailer/forward.html.erb"'
+      email_description: Descrizione posta elettronica
+      email_description_description: Descrizione dettagliata della funzionalità di posta elettronica
+      poster_short_title: Manifesto
+      poster_short_title_description: 'Breve descrizione della funzionalità di manifesto. Consente agli utenti di scaricare un manifesto in formato PDF per diffondere la loro proposta. Il contenuto del poster è memorizzato nel file "/app/views/dashboard/poster/index.pdf.erb"'
+      poster_description: Descrizione manifesto
+      poster_description_description: Descrizione dettagliata della funzionalità di manifesto
+    analytics_url: "URL per le statistiche esterne"
+    proposal_notification_minimum_interval_in_days: "Periodo minimo (in giorni) per permettere agli autori di proposte di inviare nuove notifiche di una proposta"
+    proposal_notification_minimum_interval_in_days_description: "Il numero di giorni nei quali un utente può inviare una notifica a tutti coloro che appoggiano la sua proposta"
+    direct_message_max_per_day: "Numero massimo di messaggi diretti giornalieri"
+    direct_message_max_per_day_description: "Numero massimo di messaggi diretti che un utente può inviare ogni giorno"
     feature:
       twitter_login: "Accesso con Twitter"
+      twitter_login_description: "Per consentire agli utenti di accedere con il proprio account di Twitter"
       facebook_login: "Accesso con Facebook"
+      facebook_login_description: "Per consentire agli utenti di accedere con il proprio account di Facebook"
       google_login: "Accesso con Google"
-      signature_sheets: "Fogli firma"
+      google_login_description: "Per consentire agli utenti di accedere con il proprio account di Google"
+      featured_proposals: "Proposte in evidenza"
+      featured_proposals_description: "Visualizza le proposte in evidenza nella pagina principale delle proposte"
+      signature_sheets: "Fogli delle firme"
+      signature_sheets_description: "Permette di aggiungere, dal pannello di Amministrazione, le firme raccolte di persona a proposte e a progetti di spesa di bilanci partecipativi"
       user:
-        recommendations: "Raccomandazioni"
-      help_page: "Guida"
+        recommendations: "Suggerimenti"
+        recommendations_description: "Nella homepage sono mostrati agli utenti i suggerimenti ricavati a partire dai tags associati agli elementi (proposte, etc) che stanno seguendo"
+        skip_verification: "Disabilita la certificazione degli utenti"
+        skip_verification_description: "Disabilita la certificazione degli utenti, di conseguenza tutti gli utenti registrati sul sito potranno partecipare a tutti i processi"
+        recommendations_on_debates: "Suggerimenti nei dibattiti"
+        recommendations_on_debates_description: "Nella pagina dei dibattiti, abilita la visualizzazione agli utenti dei suggerimenti ricavati a partire dai tags associati agli elementi (proposte, etc) che stanno seguendo"
+        recommendations_on_proposals: "Suggerimenti nelle proposte"
+        recommendations_on_proposals_description: "Nella pagina delle proposte, abilita la visualizzazione agli utenti dei suggerimenti ricavati a partire dai tags associati agli elementi (proposte, etc) che stanno seguendo"
+      community: "Communità nelle proposte e nei progetti di spesa"
+      community_description: "Attiva la sezione della comunità nelle proposte e nei progetti di spesa dei Bilanci partecipativi"
+      map: "Geolocalizzazione delle proposte e dei progetti di spesa"
+      map_description: "Attiva la geolocalizzazione delle proposte e dei progetti di spesa"
+      allow_images: "Caricamento e visualizzazione delle immagini"
+      allow_images_description: "Consente o meno agli utenti di caricare immagini durante la creazione di proposte e di progetti di spesa dei Bilanci partecipativi"
+      allow_attached_documents: "Creazione di documenti aggiuntivi"
+      allow_attached_documents_description: "Consente o meno agli utenti di allegare documenti durante la creazione di proposte e di progetti di spesa dei Bilanci partecipativi"
+      guides: "Guide per creare proposte o progetti di investimento"
+      guides_description: "Attiva una guida delle differenze fra le proposte e i progetti di spesa solo se è presente un bilancio partecipativo attivo"
+      public_stats: "Statistiche pubbliche"
+      public_stats_description: "Mostra le statistiche pubbliche nel pannello di Amministrazione"
+      help_page: "Pagina di 'Scopri DecidiTorino'"
+      help_page_description: 'Mostra la voce di menu "Scopri DecidiTorino" che conduce ad una pagina nella quale sono illustrate le funzionalità abilitate. È anche possibile creare pagine e menu personalizzati nelle sezioni "Pagine personalizzate" e "Blocchi personalizzati"'
+      remote_translations: "Traduzioni in remoto"
+      remote_translations_description: "Mostra un bottone che consente agli utenti di richiedere la traduzione di una pagina non ancora tradotta nella lua lingua."
+      translation_interface: "Interfaccia di traduzione"
+      translation_interface_description: "Mostra l'interfaccia di traduzione manuale per consentire agli utenti di introdurre i contenuti in tutte le lingue disponibili sull'applicazione così come loro lo desiderano. Questa opzione ha effetto solamente sulle pagine dell'applicazione visibili dagli utenti, mentre nel cruscotto dell'Administrator è sempre attiva."
+      remote_census: "Configurare connessione con l'anagrafe remota"
+      remote_census_description: "Permette di configurare la connessione con l'anagrafe remota di ogni organismo"
+      valuation_comment_notification: "Notifica commenti di valutazione"
+      valuation_comment_notification_description: "In presenza di un nuovo commento di valutazione, invia una email a tutti gli utenti associati ad un bilancio partecipativo tranne all'autore del commento"
+    remote_census:
+      general:
+        endpoint: "Endpoint"
+        endpoint_description: "Nome dell'host che espone il servizio di anagrafe (wsdl)"
+      request:
+        method_name: "Nome del metodo per la richiesta"
+        method_name_description: "Nome del metodo che accetta il WebService dell'Anagrafe del Comune."
+        structure: "Struttura della richiesta"
+        structure_description: "Struttura della richiesta inviata al WebService dell'Anagrafe del Comune. I valori fissi di questa richiesta dovranno essere documentati. I valori relativi a Tipo del Documento, Numero del Documento, Data di Nascita e CAP dovranno essere lasciati vuoti."
+        document_type: "Percorso per Tipo di Documento"
+        document_type_description: "Percorso dove si trova il campo all'interno della struttura della richiesta che invia il Tipo di Documento. DA NON VALORIZZARE qualora il WebService non richieda il Tipo di Documento per la certificazione di un utente."
+        document_number: "Percorso per Numero del Documento"
+        document_number_description: "Percorso dove si trova il campo all'interno della struttura della richiesta che invia il Numero del Documento. DA NON VALORIZZARE qualora il WebService non richieda il Numero del Documento per la certificazione di un utente."
+        date_of_birth: "Percorso per la Data di Nascita"
+        date_of_birth_description: "Percorso dove si trova il campo all'interno della struttura della richiesta che invia la Data di Nascita. DA NON VALORIZZARE qualora il WebService non richieda la Data di Nascita per la certificazione di un utente."
+        postal_code: "Percorso per il CAP."
+        postal_code_description: "Percorso dove si trova il campo all'interno della struttura della richiesta che invia il CAP. DA NON VALORIZZARE qualora il WebService non richieda il CAP per la certificazione di un utente."
+      response:
+        date_of_birth: "Percorso per la Data di Nascita"
+        date_of_birth_description: "Il percorso nella risposta dove si trova la Data di Nascita"
+        postal_code: "Percorso per il CAP"
+        postal_code_description: "Il percorso nella risposta dove si trova il CAP"
+        district: "Percorso per la Circoscrizione"
+        district_description: "Il percorso nella risposta dove si trova la Circoscrizione"
+        gender: "Percorso per il Sesso"
+        gender_description: "Il percorso nella risposta dove si trova il Sesso"
+        name: "Percorso per il Nome"
+        name_description: "Il percorso nella risposta dove si trova il Nome"
+        surname: "Percorso per il Cognome"
+        surname_description: "Il percorso nella risposta dove si trova il Cognome"
+        valid: "Condizione per rilevare una risposta valida"
+        valid_description: "Quale percorso che indica se la risposta è da considerarsi valida oppure no"
+    map:
+      latitude: "Latitudine"
+      latitude_description: "Latitudine della posizione mostrata sulla mappa"
+      longitude: "Longitudine"
+      longitude_description: "Longitudine della posizione mostrata sulla mappa"
+      zoom: "Zoom"
+      zoom_description: "Zoom della posizione mostrata sulla mappa"
+    process:
+      debates: "Dibattiti"
+      debates_description: "Lo spazio per i dibattiti dei cittadini è volto a permettere a chiunque di esporre le questioni che li riguardano e su cui vogliono condividere punti di vista con altre persone"
+      proposals: "Proposte"
+      proposals_description: "Le proposte dei cittadini sono un'opportunità per residenti e collettivi di decidere direttamente su questioni inerenti la città"
+      polls: "Votazioni"
+      polls_description: "Le votazioni sono un meccanismo di partecipazione mediante il quale i cittadini con diritto di voto possono prendere decisioni direttamente"
+      budgets: "Bilanci partecipativi"
+      budgets_description: "Con i bilanci partecipativi la popolazione decide a quali progetti presentati dai cittadini e dalle cittadine vada destinata una parte del bilancio municipale"
+      legislation: "Progetti"
+      legislation_description: "Nei progetti, ai cittadini viene offerta l'opportunità di partecipare all'elaborazione e alla modifica dei regolamenti che riguardano la città e di esprimere la propria opinione su determinate azioni che si prevede di svolgere."
+    html:
+      per_page_code_head: "Codice da inserire in ogni pagina (<head>)"
+      per_page_code_head_description: "Il codice indicato apparirà nel tag <head>. Questa funzionalità è utile per inserire scripts personalizzati, analitycs..."
+      per_page_code_body: "Codice da inserire in ogni pagina (<body>)"
+      per_page_code_body_description: "Il codice indicato apparirà nel tag <body>. Questa funzionalità è utile per inserire scripts personalizados, analitycs..."
+    uploads:
+      images:
+        min_width: "Larghezza minima dell'immagine"
+        min_width_description: "Larghezza minima consentita nel caricamento di una immagine (in pixel)"
+        min_height: "Altezza minima dell'immagine"
+        min_height_description: "Altezza minima consentita nel caricamento di una immagine (in pixel)"
+        max_size: "Dimensione massima dell'immagine"
+        max_size_description: "Dimensione massima consentita nel caricamento di una immagine (in Megabytes/MB)"
+        content_types: "Tipi di immagini consentiti"
+        content_types_description: "Seleziona i tipi consentiti per le immagini caricate"
+        title:
+          min_length: "Lunghezza minima del titolo dell'immagine"
+          min_length_description: "Il titolo è fornito dall'utente quando si carica un'immagine (si usa come attributo HTML alt)"
+          max_length: "Lunghezza massima del titolo dell'immagine"
+          max_length_description: "Il titolo è fornito dall'utente quando si carica un'immagine (si usa come attributo HTML alt)"
+      documents:
+        max_amount: "Numero massimo di documenti"
+        max_amount_description: "Numero massimo di documenti che è possibile aggiungere ad una proposta, ad un progetto di spesa..."
+        max_size: "Dimensione massima del documento"
+        max_size_description: "Dimensione massima consentita nel caricamento di un documento (in Megabytes/MB)"
+        content_types: "Tipi di documenti consentiti"
+        content_types_description: "Seleziona i tipi consentiti per i documenti caricati"
