--- a/config/locales/it/stats.yml
+++ b/config/locales/it/stats.yml
@@ -1,1 +1,42 @@
 it:
+  stats:
+    title: "Statistiche di partecipazione"
+    advanced: "Statistiche avanzate"
+    total_participants: "Partecipanti"
+    by_gender: "Partecipanti per genere"
+    by_age: "Partecipanti per gruppi di età"
+    by_geozone: "Partecipanti per distretti"
+    men_percentage: "%{percentage} Uomini"
+    women_percentage: "%{percentage} Donne"
+    age: "Età"
+    age_more_than: "Da %{start} anni in poi"
+    age_range: "Da %{start} a %{finish} anni"
+    total: "Totale"
+    geozone: "Distretto"
+    no_demographic_data:
+      one: "* Non si dispone dei dati demografici di 1 partecipante."
+      other: "* Non si dispone dei dati demografici di %{count} partecipanti."
+    budgets:
+      link: "Statistiche"
+      page_title: "%{budget} - Statistiche di partecipazione"
+      total_investments: "Totale progetti di spesa"
+      total_selected_investments: "Progetti nella fase finale"
+      total_unfeasible_investments: "Progetti infattibili"
+      by_phase: "Partecipanti per fasi"
+      by_heading: "Partecipanti per distretti e fase"
+      total: "Totale"
+      heading: "Distretto"
+      investments_sent_html: "Proposte<br>inviate"
+      participants_support_phase: "Partecipanti fase appoggi"
+      participants_vote_phase: "Partecipanti fase votazione"
+      participants_every_phase: "Totale dei partecipanti"
+      percent_total_participants: "% Totale partecipanti"
+      percent_heading_census: "% Censo distretto"
+      participatory_disclaimer: "** Le cifre del totale dei partecipanti sono riferite alle persone che hanno creato, appoggiato o votato le proposte."
+      heading_disclaimer: "*** I dati del distretto sono riferiti al distretto nel quale l'utente ha votato, non necessariamente quello nel quale risiede."
+    polls:
+      by_channel: "Partecipanti per mezzo"
+      vote_by_channel: "Voti emessi per mezzo"
+      web_percentage: "%{percentage} Web"
+      booth_percentage: "%{percentage} Urne"
+      letter_percentage: "%{percentage} Posta"
