--- a/config/locales/it/activemodel.yml
+++ b/config/locales/it/activemodel.yml
@@ -4,39 +4,31 @@ it:
       verification:
         residence: "Residenza"
         sms: "SMS"
+      local_census_records/import:
+        one: Import dati anagrafici
+        other: Import dati anagrafici
     attributes:
       verification:
         residence:
-          document_type: "Tipo Documento di identità"
-          document_number: "Numero del documento (lettere incluse)"
+          document_type: "Tipo documento"
+          document_number: "Numero documento"
           date_of_birth: "Data di nascita"
-          postal_code: "Cap"
+          postal_code: "CAP"
         sms:
           phone: "Telefono"
-          confirmation_code: "SMS di conferma"
+          confirmation_code: "Codice di conferma"
         email:
-          recipient: "E-mail"
-      verification/letter:
-        email: "Email"
-        password: "Password"
-        verification_code: "Codice che hai ricevuto nella lettera"
-      verification/management/document:
-        document_type: "Tipo documento:"
-        document_number: "Numero documento"
-      verification/residence:
-        date_of_birth: "Data di nascita"
-        document_type: "Tipo documento"
-        postal_code: "Codice Postale"
-      verification/sms:
-        confirmation_code: "Inserisci il codice che hai ricevuto sul tuo cellulare"
+          recipient: "Email"
       officing/residence:
-        document_type: "Tipo di documento"
-        document_number: "Numero del documento (lettere incluse)"
+        document_type: "Tipo documento"
+        document_number: "Numero documento"
         year_of_birth: "Anno di nascita"
+      local_census_records/import:
+        file: File
     errors:
       models:
         local_census_records/import:
           attributes:
             file:
-              extension: "Il formato file dato è sbagliato. Il formato file consentito è: %{valid_extensions}."
-              headers: "Le intestazioni file date sono sbagliate. Le intestazioni file devono avere i nomi seguenti: %{required_headers}."
+              extension: "Il formato del file non è corretto. I formati consentiti del file sono: %{valid_extensions}."
+              headers: "Le intestazioni del file non sono corrette. Le intestazioni del file devono avere i seguenti nomi: %{required_headers}."
