--- a/config/locales/it/community.yml
+++ b/config/locales/it/community.yml
@@ -3,51 +3,58 @@ it:
     sidebar:
       title: Comunità
       description:
-        proposal: Partecipa alla comunità di utenti per questa proposta.
-        investment: Partecipa alla comunità di utenti per questo investimento.
+        proposal: Partecipa alla comunità degli utenti di questa proposta.
+        investment: Partecipa alla comunità degli utenti di questo progetto di spesa.
       button_to_access: Accedi alla comunità
     show:
       title:
-        proposal: Comunità della Proposta
-        investment: Comunità dell’Investimento di Bilancio
+        proposal: Comunità della proposta
+        investment: Comunità del bilancio partecipativo
       description:
         proposal: Partecipa alla comunità di questa proposta. Una comunità attiva può aiutare a migliorare il contenuto della proposta e incrementare la sua diffusione per ottenere maggior supporto.
-        investment: Partecipa alla comunità di questo investimento di bilancio. Una comunità attiva può aiutare a migliorare il contenuto dell’investimento e incrementare la sua diffusione per ottenere maggior supporto.
+        investment: Partecipa alla comunità di questo progetto di spesa. Una comunità attiva può aiutare a migliorare il contenuto del progetto di investimento e incrementare la sua diffusione per ottenere maggior supporto.
       create_first_community_topic:
-        first_theme_not_logged_in: Nessun argomento disponibile, partecipa creando il primo.
-        first_theme: Crea il primo argomento della comunità
+        first_theme_not_logged_in: Al momento non ci sono temi disponibili, partecipa creando il primo.
+        first_theme: Crea il primo tema della comunità
         sub_first_theme: "Per creare un tema è necessario %{sign_in} o %{sign_up}."
+        sign_in: "accedere"
+        sign_up: "registrarsi"
       tab:
         participants: Partecipanti
       sidebar:
         participate: Partecipa
-        new_topic: Crea argomento
+        new_topic: Crea un tema
       topic:
-        edit: Modifica argomento
-        destroy: Distruggi argomento
+        edit: Modifica tema
+        destroy: Elimina tema
         comments:
-          zero: Non ci sono commenti
+          zero: Nessun commento
           one: 1 commento
           other: "%{count} commenti"
       author: Autore
       back: Torna a %{community} %{proposal}
     topic:
-      create: Crea un argomento
-      edit: Modifica argomento
+      create: Crea un tema
+      edit: Modifica tema
       form:
+        topic_title: Titolo
+        topic_text: Testo iniziale
         new:
-          submit_button: Crea argomento
+          submit_button: Crea tema
         edit:
-          submit_button: Modifica argomento
+          submit_button: Salva modifiche
         create:
-          submit_button: Crea argomento
+          submit_button: Crea tema
         update:
-          submit_button: Aggiorna argomento
+          submit_button: Aggiorna tema
       show:
         tab:
           comments_tab: Commenti
       sidebar:
-        recommendations_title: Consigli per la creazione di un argomento
-        recommendation_one: Non scrivere il titolo dell’argomento o intere frasi in maiuscolo. Su internet equivale a urlare. E a nessuno piace che qualcuno gli urli contro.
-        recommendation_two: Qualsiasi argomento o commento che suggerisca o implichi attività illecite verrà eliminato, così come quelli intesi a sabotare lo spazio dedicato al tema. Tutto il resto è permesso.
-        recommendation_three: Goditi questo spazio e le voci che lo riempiono, appartiene anche a te.
+        recommendations_title: Suggerimenti per creare un tema
+        recommendation_one: Non scrivere in maiuscolo il titolo del tema o intere frasi. In internet il maiuscolo è considerato gridare. A nessuno piace che si alzi la voce.
+        recommendation_two: "Qualsiasi tema o commento che implichi una azione illegale sarà eliminato, anche quelli scritti con l'intenzione di sabotare gli spazi del tema, tutto il resto è permesso."
+        recommendation_three: Usa bene questo spazio e le voci che lo compongono, sono a tua disposizione.
+  topics:
+    show:
+      login_to_comment: È necessario %{signin} o %{signup} per lasciare un commento.
