--- a/config/locales/it/documents.yml
+++ b/config/locales/it/documents.yml
@@ -1,21 +1,24 @@
 it:
   documents:
     title: Documenti
+    max_documents_allowed_reached_html: 'Hai raggiunto il numero massimo di documenti consentiti! <strong>Se ne deve eliminare uno per poter allegarne un altro.</strong>'
+    additional: Documentazione aggiuntiva
     form:
       title: Documenti
-      title_placeholder: Aggiungi un titolo descrittivo per il documento
-      delete_button: Rimuovi documento
-      cancel_button: Cancella
-      note: "È possibile caricare fino ad un massimo di %{max_documents_allowed} documenti con i seguenti tipi di contenuto: %{accepted_content_types}, fino a %{max_file_size} MB per ogni file."
+      title_placeholder: Aggiungi un titolo descrittivo del documento
+      attachment_label: Seleziona un documento
+      delete_button: Elimina documento
+      cancel_button: Annulla
+      note: 'È possibile allegare fino ad un massimo di %{max_documents_allowed} documenti nei formati: %{accepted_content_types}, e di dimensione fino a %{max_file_size} MB per file.'
       add_new_document: Aggiungi nuovo documento
     actions:
       destroy:
-        notice: Il documento è stato cancellato con successo.
-        alert: Non è possibile distruggere il documento.
-        confirm: Sei sicuro di voler cancellare il documento? Questa azione non può essere annullata!
+        notice: Il documento è stato eliminato con successo.
+        alert: Non è stato possibile eliminare il documento.
+        confirm: "Confermi l'eliminazione del documento? Non è possibile annullare questa operazione!"
     buttons:
       download_document: Scarica file
-      destroy_document: Distruggi documento
+      destroy_document: Elimina documento
     errors:
       messages:
         in_between: deve essere tra %{min} e %{max}
