--- a/config/locales/it/management.yml
+++ b/config/locales/it/management.yml
@@ -2,128 +2,133 @@ it:
   management:
     account:
       menu:
-        reset_password_email: Reimposta la password via email
-        reset_password_manually: Reimposta la password manualmente
+        reset_password_email: Recupero password via email
+        reset_password_manually: Recupero password manualmente
       alert:
-        unverified_user: Si possono modificare solo utenti già verificati
+        unverified_user: Si possono modificare solo gli account degli utenti verificati
       show:
         title: Account utente
       edit:
-        title: "Modifica account utente: Reimposta password"
+        title: "Modifica account utente: Recupero password"
         back: Indietro
         password:
           password: Password
-          send_email: Invia email di reimpostazione password
+          send_email: Invia email per recuperare la password
           reset_email_send: Email inviata correttamente.
-          reseted: Password reimpostata con successo
-          random: Genera password casuale
+          reseted: Password recuperata correttamente
+          random: Genera una password casuale
           save: Salva password
           print: Stampa password
-          print_help: Sarai in grado di stampare la password quando sarà salvata.
+          print_help: Dopo aver salvato la password sarà possibile stamparla.
     account_info:
       change_user: Cambia utente
-      document_number_label: "Numero del documento:"
-      document_type_label: "Tipo Documento di identità:"
-      email_label: "E-mail:"
+      document_number_label: "Dati identificativi del documento:"
+      document_type_label: "Tipo di documento:"
+      email_label: "Email:"
       identified_label: "Identificato come:"
-      username_label: "Nome utente:"
-    check: Controlla documento
+      username_label: "Utente:"
+    check: Verifica documento
     dashboard:
       index:
         title: Gestione
-        info: Qui è possibile gestire gli utenti attraverso tutte le azioni elencate nel menu a sinistra.
+        info: Da qui è possibile gestire gli utenti mediante le azioni elencate nel menu di sinistra.
+    document_number: Dati identificativi del documento
+    document_type_label: Tipo di documento
     document_verifications:
-      already_verified: Questo account utente è già verificato.
-      link: CONSUL
+      already_verified: Questo account utente è già stato verificato.
+      has_no_account_html: Per creare un account, vai a %{link} e fai click su <b>'Registrati'</b> nella parte superiore destra dello schermo.
+      link: DecidiTorino
       in_census_has_following_permissions: "Questo utente può partecipare con le seguenti autorizzazioni:"
       not_in_census: Questo documento non è registrato.
       not_in_census_info: "I cittadini non residenti possono partecipare con le seguenti autorizzazioni:"
-      please_check_account_data: Si prega di controllare che i dati dell'utenza sopra riportati siano corretti.
+      please_check_account_data: "Si prega di controllare che i dati dell'utenza sopra riportati siano corretti."
       title: Gestione degli utenti
       under_age: "Non hai l'età richiesta per verificare l'account."
-      verify: Verifica
+      verify: Verifica utente
     email_label: Email
     date_of_birth: Data di nascita
     email_verifications:
-      already_verified: Questo account utente è già verificato.
+      already_verified: "Questo account dell'utente è già certificato."
       choose_options: "Si prega di scegliere una delle opzioni seguenti:"
       document_found_in_census: Questo documento è stato trovato in anagrafe, ma non ha alcun account utente ad esso associato.
       document_mismatch: "Questa e-mail appartiene a un utente che dispone già di un identificativo associato: %{document_number}(%{document_type})"
-      email_placeholder: Inserisci l'email utilizzata per creare l'utente
-      email_sent_instructions: Per verificare completamente questo utente, è necessario che cliccare su un link che ti abbiamo inviato all'indirizzo di posta elettronica sopra riportato. Questo passaggio è necessario al fine di confermare che l'indirizzo e-mail sia proprio il tuo.
+      email_placeholder: "Inserisci l'email utilizzata per creare l'utente"
+      email_sent_instructions: "Per verificare completamente questo utente, è necessario che cliccare su un link che ti abbiamo inviato all'indirizzo di posta elettronica sopra riportato. Questo passaggio è necessario al fine di confermare che l'indirizzo e-mail sia proprio il tuo."
       if_existing_account: Se la persona ha già un account utente creato nel sito,
-      if_no_existing_account: Se questa persona non ha ancora creato un account
-      introduce_email: "Si prega di introdurre l'e-mail utilizzata sul conto:"
-      send_email: Inviare email di verifica
+      if_no_existing_account: Se questa persona non ha ancora creato nel sito un account
+      introduce_email: "Si prega di introdurre l'indirizzo di email usato per creare l'utenza:"
+      send_email: Invia email di verifica
     menu:
       create_proposal: Crea proposta
-      print_proposals: Stampare le proposte
-      support_proposals: Appoggiare le proposte
-      create_budget_investment: Creare un progetto di investimento
-      print_budget_investments: Stampa investimenti di bilancio
-      support_budget_investments: Sostieni investimenti di bilancio
+      print_proposals: Stampa proposte
+      support_proposals: Sostieni proposte
+      create_budget_investment: Crea progetti di spesa
+      print_budget_investments: Stampa i progetti di spesa
+      support_budget_investments: Appoggia i progetti di spesa
       users: Gestione degli utenti
-      user_invites: Manda inviti
+      user_invites: Spedisci inviti
       select_user: Seleziona utente
     permissions:
-      create_proposals: Creare proposte
-      debates: Partecipare nei dibattiti
-      support_proposals: Appoggiare le proposte
-      vote_proposals: Partecipare alle votazioni finali
+      create_proposals: Crea nuove proposte
+      debates: Partecipa ai dibattiti
+      support_proposals: Sostieni proposte
+      vote_proposals: Partecipa alle votazioni finali
     print:
-      proposals_info: Crea la tua proposta su http://url.consul
+      proposals_info: Fai la tua proposta su https://www.deciditorino.it/
       proposals_title: "Proposte:"
-      budget_investments_info: Partecipa su http://url.consul
-    print_info: Stampa queste informazioni
+      budget_investments_info: Partecipa a https://www.deciditorino.it/
+    print_info: Stampa questa informazione
     proposals:
       alert:
-        unverified_user: L'utente non è stato verificato
+        unverified_user: Utente non certificato
       create_proposal: Crea proposta
       print:
-        print_button: Stampare
+        print_button: Stampa
       index:
-        title: Appoggiare le proposte
+        title: Appoggia proposte
     budgets:
-      create_new_investment: Crea investimento di bilancio
-      print_investments: Stampa investimenti di bilancio
-      support_investments: Sostieni investimenti di bilancio
-      table_name: Nominativo
+      create_new_investment: Crea progetti di spesa
+      print_investments: Stampa progetti di spesa
+      support_investments: Appoggia progetti di spesa
+      table_name: Nome
       table_phase: Fase
       table_actions: Azioni
       no_budgets: Non ci sono bilanci partecipativi attivi.
     budget_investments:
       alert:
-        unverified_user: L'utente non è verificato
-      create: Crea un investimento di bilancio
-      edit: Modifica budget investimento
+        unverified_user: Utente non verificato
+      create: Crea nuovo progetto
       filters:
         heading: Concetto
-        unfeasible: Il progetto non è realizzabile
+        unfeasible: Progetti non realizzabili
       print:
         print_button: Stampa
       search_results:
-        one: " contenenti il termine '%{search_term}'"
-        other: " contenenti il termine '%{search_term}'"
+        one: " che contiene '%{search_term}'"
+        other: " che contengono '%{search_term}'"
     sessions:
       signed_out: Disconnesso correttamente.
       signed_out_managed_user: Sessione utente disconnessa correttamente.
     username_label: Nome utente
     users:
-      create_user: Creare un nuovo account
+      create_user: Crea nuovo account utente
       create_user_info: Creeremo un account con i seguenti dati
-      create_user_submit: Creare l'utente
-      email_optional_label: Email (opzionale)
+      create_user_submit: Crea utente
+      create_user_success_html: "Abbiamo inviato una email all'indirizzo <b>%{email}</b> per verificare che sia la tua. La mail contiene un link che dovrà essere cliccato per impostare la password di accesso."
+      autogenerated_password_html: "La password generata automaticamente è <b>%{password}</b>, è possibile modificarla nella sezione «Mio profilo»"
+      email_optional_label: Email (consigliato però facoltativo)
       erased_notice: Account utente eliminato.
-      erased_by_manager: "Eliminato dal manager: %{manager}"
-      erase_account_link: Eliminare utente
-      erase_account_confirm: Sei sicuro di che voler cancellare l'account? Questa azione non può essere annullata
-      erase_warning: Questa azione non può essere annullata. Si prega di assicurarsi che si desidera cancellare questo account.
-      erase_submit: Eliminare account
+      erased_by_manager: "Eliminata dal gestore: %{manager}"
+      erase_account_link: Elimina account
+      erase_account_confirm: 'Sei sicuro di che voler cancellare questo account? Questa azione non può essere annullata'
+      erase_warning: Questa azione non può essere annullata. Si prega di assicurarsi di voler cancellare realmente questo account.
+      erase_submit: Elimina account
     user_invites:
       new:
-        label: E-mail
-        info: "Inserisci l'e-mail separate da virgola (',')"
-        submit: Manda inviti
-        title: Manda inviti
+        label: Emails
+        info: "Introdurre gli indirizzi di email separati da virgola (',')"
+        submit: Spedisci inviti
+        title: Spedisci inviti
       create:
-        title: Manda inviti
+        success_html: Sono stati inviati <strong>%{count} inviti</strong>.
+        title: Spedisci inviti
