--- a/config/locales/it/moderation.yml
+++ b/config/locales/it/moderation.yml
@@ -2,22 +2,22 @@ it:
   moderation:
     comments:
       index:
-        block_authors: Blocca gli autori
-        confirm: Sei sicuro?
-        filter: Filtra
+        block_authors: Blocca autori
+        confirm: 'Sei sicuro?'
+        filter: Filtro
         filters:
           all: Tutti
           pending_flag_review: In sospeso
-          with_ignored_flag: Contrassegna come già visto
+          with_ignored_flag: Marcati come esaminati
         headers:
-          comment: Commentare
-          moderate: Moderare
-        hide_comments: Nascondere i commenti
-        ignore_flags: Contrassegna come già visto
+          comment: Commenti
+          moderate: Modera
+        hide_comments: Nascondi commenti
+        ignore_flags: Segna come esaminati
         order: Ordine
         orders:
-          flags: I più segnalati
-          newest: Più recente
+          flags: Più segnalati
+          newest: Più nuovi
         title: Commenti
     dashboard:
       index:
@@ -25,93 +25,93 @@ it:
     debates:
       index:
         block_authors: Blocca autori
-        confirm: Sei sicuro?
+        confirm: 'Sei sicuro?'
         filter: Filtra
         filters:
           all: Tutti
           pending_flag_review: In sospeso
-          with_ignored_flag: Contrassegna come già visto
+          with_ignored_flag: Marcati come esaminati
         headers:
           debate: Dibattito
           moderate: Modera
-        hide_debates: Nascondi i dibattiti
-        ignore_flags: Contrassegna come già visto
-        order: Ordina
+        hide_debates: Nascondi dibattiti
+        ignore_flags: Segna come esaminati
+        order: Ordine
         orders:
-          created_at: Più recenti
+          created_at: Più nuovi
           flags: Più segnalati
         title: Dibattiti
     header:
-      title: Moderare
+      title: Moderazione
     menu:
       flagged_comments: Commenti
       flagged_debates: Dibattiti
-      flagged_investments: Investimenti di bilancio
+      flagged_investments: Progetti di spesa
       proposals: Proposte
       proposal_notifications: Notifiche di proposte
-      users: Blocca gli utenti
+      users: Blocca utenti
     proposals:
       index:
         block_authors: Blocca autori
-        confirm: Sei sicuro?
-        filter: Filtra
+        confirm: 'Sei sicuro?'
+        filter: Filtro
         filters:
-          all: Tutti
+          all: Tutte
           pending_flag_review: In attesa di revisione
-          with_ignored_flag: Contrassegna come già visto
+          with_ignored_flag: Marcate come esaminate
         headers:
           moderate: Modera
           proposal: Proposta
-        hide_proposals: Nascondi le proposte
-        ignore_flags: Contrassegna come già visto
-        order: Ordinare per
+        hide_proposals: Nascondi Proposte
+        ignore_flags: Segna come esaminate
+        order: Ordina per
         orders:
-          created_at: Più recente
-          flags: Più segnalati
+          created_at: Più recenti
+          flags: Più segnalate
         title: Proposte
     budget_investments:
       index:
         block_authors: Blocca autori
-        confirm: Sei sicuro?
-        filter: Filtra
+        confirm: 'Sei sicuro?'
+        filter: Filtro
         filters:
           all: Tutti
-          pending_flag_review: In sospeso
-          with_ignored_flag: Contrassegna come già visto
+          pending_flag_review: In attesa di revisione
+          with_ignored_flag: Segnati come esaminati
         headers:
           moderate: Modera
-          budget_investment: Investimento di bilancio
-        hide_budget_investments: Nascondi investimenti di bilancio
-        ignore_flags: Contrassegna come già visto
-        order: Ordinare per
+          budget_investment: Progetti di spesa
+        hide_budget_investments: Nascondi progetti di spesa
+        ignore_flags: Segna come esaminati
+        order: Ordina per
         orders:
-          created_at: Più recente
-          flags: Più segnalati
-        title: Investimenti di bilancio
+          created_at: Più recenti
+          flags: Più denunciate
+        title: Progetti di spesa
     proposal_notifications:
       index:
         block_authors: Blocca autori
-        confirm: Sei sicuro?
-        filter: Filtra
+        confirm: 'Sei sicuro?'
+        filter: Filtro
         filters:
-          all: Tutti
-          pending_review: In attesa di revisione
-          ignored: Contrassegna come già visto
+          all: Tutte
+          pending_review: In attesa di verifica
+          ignored: Segnate come verificate
         headers:
           moderate: Modera
-          proposal_notification: Notifica di proposta
-        hide_proposal_notifications: Nascondi le proposte
-        ignore_flags: Contrassegna come già visto
-        order: Ordinare per
+          proposal_notification: Notifiche di una proposta
+        hide_proposal_notifications: Nascondi notifiche
+        ignore_flags: Segna come verificate
+        order: Ordina per
         orders:
-          created_at: Più recente
-          moderated: Oggetto di moderazione
-        title: Notifiche di proposta
+          created_at: Più recenti
+          moderated: Moderate
+        title: Notifiche di proposte
     users:
       index:
         hidden: Bloccato
-        hide: Blocco
-        search: Ricercare
-        search_placeholder: e-mail o nome utente
-        title: Blocca gli utenti
-      notice_hide: Utente bloccato. Tutti i dibattiti e commenti di questo utente sono state nascostie.
+        hide: Blocca
+        search: Cerca
+        search_placeholder: email o nome utente
+        title: Blocca utenti
+      notice_hide: Utente bloccato. Tutti i suoi dibattiti e i suoi commenti sono stati nascosti.
