--- a/config/locales/it/rails.yml
+++ b/config/locales/it/rails.yml
@@ -1,53 +1,53 @@
 it:
   date:
     abbr_day_names:
-      - Dom
-      - Lun
-      - Mar
-      - Mer
-      - Gio
-      - Ven
-      - Sab
+      - dom
+      - lun
+      - mar
+      - mer
+      - gio
+      - ven
+      - sab
     abbr_month_names:
-      - 
-      - Gen
-      - Feb
-      - Mar
-      - Apr
-      - Maggio
-      - Giu
-      - Lug
-      - Ago
-      - Set
-      - Ott
-      - Nov
-      - Dic
+      -  
+      - gen
+      - feb
+      - mar
+      - apr
+      - mag
+      - giu
+      - lug
+      - ago
+      - set
+      - ott
+      - nov
+      - dic
     day_names:
-      - Domenica
-      - Lunedì
-      - Martedì
-      - Mercoledì
-      - Giovedì
-      - Venerdì
-      - Sabato
+      - domenica
+      - lunedì
+      - martedì
+      - mercoledì
+      - giovedì
+      - venerdì
+      - sabato
     formats:
-      default: "%Y-%m-%d"
-      long: "%B %d, %Y"
-      short: "%b %d"
+      default: "%d/%m/%Y"
+      long: "%d de %B de %Y"
+      short: "%d de %b"
     month_names:
-      - 
-      - Gennaio
-      - Febbraio
-      - Marzo
-      - Aprile
-      - Mag
-      - Giugno
-      - Luglio
-      - Agosto
-      - Settembre
-      - Ottobre
-      - Novembre
-      - Dicembre
+      -  
+      - gennaio
+      - febbraio
+      - marzo
+      - aprile
+      - maggio
+      - giugno
+      - luglio
+      - agosto
+      - settembre
+      - ottobre
+      - novembre
+      - dicembre
   datetime:
     distance_in_words:
       about_x_hours:
@@ -82,7 +82,7 @@ it:
         one: 1 mese
         other: "%{count} mesi"
       x_years:
-        one: 1 anno
+        one: '%{count} anno'
         other: "%{count} anni"
       x_seconds:
         one: 1 secondo
@@ -90,7 +90,7 @@ it:
     prompts:
       day: Giorno
       hour: Ora
-      minute: Minuto
+      minute: Minuti
       month: Mese
       second: Secondi
       year: Anno
@@ -98,61 +98,61 @@ it:
     format: "%{attribute} %{message}"
     messages:
       accepted: deve essere accettato
-      blank: non può essere in bianco
-      present: deve essere in bianco
-      confirmation: non corrisponde a %{attribute}
-      empty: non può essere vuoto
-      equal_to: deve essere uguale a %{count}
+      blank: non può restare in bianco
+      present: deve restare in bianco
+      confirmation: non coincide
+      empty: non può restare vuoto
+      equal_to: "deve essere uguale a %{count}"
       even: deve essere pari
       exclusion: è riservato
-      greater_than: deve essere maggiore di %{count}
-      greater_than_or_equal_to: deve essere maggiore o uguale a %{count}
-      inclusion: non è incluso nell'elenco
+      greater_than: "deve essere maggiore di %{count}"
+      greater_than_or_equal_to: "deve essere maggiore o uguale a %{count}"
+      inclusion: non è incluso nella lista
       invalid: non è valido
-      less_than: deve essere minore di %{count}
-      less_than_or_equal_to: deve essere minore o uguale a %{count}
-      model_invalid: "Verifica non riuscita: %{errors}"
+      less_than: "deve essere minore di %{count}"
+      less_than_or_equal_to: "deve essere minore o uguale a %{count}"
+      model_invalid: "La validazione non si è conclusa: %{errors}"
       not_a_number: non è un numero
-      not_an_integer: deve essere un numero intero
+      not_an_integer: deve essere un intero
       odd: deve essere dispari
-      required: deve esistere
-      taken: già in uso
+      required: deve essere presente
+      taken: è già in uso
       too_long:
-        one: è troppo lungo (max 1 carattere)
-        other: è troppo lungo (massimo è %{count} caratteri)
+        one: "è troppo lungo (massimo %{count} caratteri)"
+        other: "è troppo lungo (massimo %{count} caratteri)"
       too_short:
-        one: è troppo corto (il minimo è 1 carattere)
-        other: è troppo corto (minimo %{count} caratteri)
+        one: "è troppo corto (minimo %{count} caratteri)"
+        other: "è troppo corto (minimo %{count} caratteri)"
       wrong_length:
-        one: lunghezza sbagliata (dovrebbe essere 1 carattere)
-        other: lunghezza sbagliata (dovrebbe essere %{count} caratteri)
-      other_than: deve essere diversa da %{count}
+        one: "lunghezza errata (dovrebbe essere di %{count} caratteri)"
+        other: "lunghezza errata (dovrebbe essere di %{count} caratteri)"
+      other_than: deve essere diverso da %{count}
     template:
       body: "Ci sono stati problemi con i seguenti campi:"
       header:
-        one: Questo %{model} non può essere salvato a causa di 1 errore
-        other: "Questo %{model} non può essere salvato a causa di %{count} errori"
+        one: "Non è stato possibile salvare questo/a %{model} perché si è verificato 1 errore"
+        other: "Non è stato possibile salvare questo/a %{model} perché si sono verificati %{count} errori"
   helpers:
     select:
       prompt: Si prega di selezionare
     submit:
-      create: Creare %{model}
-      submit: Salvare %{model}
-      update: Aggiornare %{model}
+      create: Crea %{model}
+      submit: Salva %{model}
+      update: Aggiorna %{model}
   number:
     currency:
       format:
-        delimiter: ","
-        format: "%u%n"
+        delimiter: "."
+        format: "%n %u"
         precision: 2
-        separator: "."
+        separator: ","
         significant: false
         strip_insignificant_zeros: false
-        unit: "$"
+        unit: "€"
     format:
-      delimiter: ","
+      delimiter: "."
       precision: 3
-      separator: "."
+      separator: ","
       significant: false
       strip_insignificant_zeros: false
     human:
@@ -160,10 +160,10 @@ it:
         format: "%n %u"
         units:
           billion: Miliardi
-          million: Milioni di euro
-          quadrillion: Quadrilione
-          thousand: Mille
-          trillion: Trilione
+          million: millón
+          quadrillion: mil billones
+          thousand: mil
+          trillion: billón
       format:
         precision: 3
         significant: true
@@ -183,15 +183,15 @@ it:
         format: "%n%"
   support:
     array:
-      last_word_connector: ", e "
+      last_word_connector: " e "
       two_words_connector: " e "
       words_connector: ", "
   time:
     am: am
     formats:
-      datetime: "%Y-%m-%d %H:%M:%S"
-      default: "%a, %d %b %Y %H:%M:%S %z"
-      long: "%d di %B di %Y %H:%M"
-      short: "%d di %b %H:%M"
-      api: "%Y-%m-%d %H"
+      datetime: "%d/%m/%Y %H:%M:%S"
+      default: "%A, %d de %B de %Y %H:%M:%S %z"
+      long: "%d de %B de %Y %H:%M"
+      short: "%d de %b %H:%M"
+      api: "%d/%m/%Y %H"
     pm: pm
