--- a/config/locales/it/seeds.yml
+++ b/config/locales/it/seeds.yml
@@ -1,54 +1,54 @@
 it:
   seeds:
     settings:
-      official_level_1_name: Incarico ufficiale 1
-      official_level_2_name: Incarico ufficiale 2
-      official_level_3_name: Incarico ufficiale 3
-      official_level_4_name: Incarico ufficiale 4
-      official_level_5_name: Incarico ufficiale 5
+      official_level_1_name: Impiegati pubblici
+      official_level_2_name: Organizzazione Municipale
+      official_level_3_name: Direttori generali
+      official_level_4_name: Assessori
+      official_level_5_name: Sindaco
     geozones:
-      north_district: Distretto Nord
-      west_district: Distretto Ovest
-      east_district: Distretto Est
-      central_district: Distretto Centrale
+      north_district: Circoscrizione Nord
+      west_district: Circoscrizione Ovest
+      east_district: Circoscrizione Est
+      central_district: Centro
     organizations:
-      human_rights: Diritti Umani
-      neighborhood_association: Associazione di Quartiere
+      human_rights: Diritti Umani
+      neighborhood_association: Associazione di quartiere
     categories:
       associations: Associazioni
       culture: Cultura
       sports: Sport
       social_rights: Diritti Sociali
       economy: Economia
-      employment: Occupazione
-      equity: Equità
-      sustainability: Sostenibilità
+      employment: Lavoro
+      equity: "Equità"
+      sustainability: "Sostenibilità"
       participation: Partecipazione
-      mobility: Mobilità
-      media: Media
+      mobility: "Mobilità"
+      media: Mezzi di informazione
       health: Salute
       transparency: Trasparenza
-      security_emergencies: Sicurezza ed Emergenze
+      security_emergencies: Sicurezza e Emergenze
       environment: Ambiente
     budgets:
       budget: Bilancio Partecipativo
       currency: '€'
       groups:
-        all_city: Tutta la Città
+        all_city: "Tutta la Città"
         districts: Distretti
       valuator_groups:
-        culture_and_sports: Cultura & Sport
-        gender_and_diversity: Politiche di Genere & Diversità
+        culture_and_sports: Cultura e Sport
+        gender_and_diversity: Politiche di genere e diversità
         urban_development: Sviluppo Urbano Sostenibile
-        equity_and_employment: Equità & Occupazione
+        equity_and_employment: Equità e Occupazione
       statuses:
-        studying_project: Lo studio del progetto
+        studying_project: Analizzando il progetto
         bidding: Offerta
-        executing_project: L'esecuzione del progetto
+        executing_project: Eseguendo il progetto
         executed: Eseguito
     polls:
-      current_poll: "Votazione Corrente"
-      current_poll_geozone_restricted: "Votazione Corrente Geograficamente Ristretta"
-      recounting_poll: "Votazione a Scrutinio"
-      expired_poll_without_stats: "Votazione Scaduta senza Statistiche & Risultati"
-      expired_poll_with_stats: "Votazione Scaduta con Statistiche & Risultati"
+      current_poll: Votazione Aperta
+      current_poll_geozone_restricted: Votazione Aperta ristretta per geozona
+      recounting_poll: Votazione in Riconteggio
+      expired_poll_without_stats: Votazione Conclusa (senza Statistiche o Risultati)
+      expired_poll_with_stats: Votazione Conclusa (con Statistiche e Risultati)
